# etf-crossmarket-arb

./: LICENSE  README.md  pyproject.toml  requirements.txt  run.py  streamlit_app.py
arbitrage/: backtest.py  config.py  core.py  data.py  plotting.py
arbitrage /: __init__.py  data.py
data/: CSPX.L_daily.csv  IEMM.MI_daily.csv
src/     arbitrage/: __init__.py  backtest.py  config.py  core.py  data.py  plotting.py
src/data/: EURUSD_daily.csv  SPY_daily.csv  VWO_daily.csv
tests/: test_fx_normalizer.py  test_pair_analyzer.py  test_signal_and_backtest.py
